--- a/package.json
+++ b/package.json
@@ -4,34 +4,28 @@
   "private": true,
   "homepage": "https://maks417.github.io/portfolio-balancer-client",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.0",
-    "bootstrap": "^5.1.3",
+    "axios": "^1.13.5",
+    "bootstrap": "^5.3.8",
     "gh-pages": "^6.3.0",
-    "react": "^17.0.2",
-    "react-bootstrap-range-slider": "^3.0.4",
-    "react-dom": "^17.0.2",
-    "react-router": "^6.2.1",
+    "react": "^19.2.4",
+    "react-bootstrap-range-slider": "^3.0.8",
+    "react-dom": "^19.2.4",
+    "react-router": "^7.13.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
-    "reactstrap": "^9.0.1",
-    "sass": "^1.69.5",
-    "web-vitals": "^2.1.2"
+    "reactstrap": "^9.2.3",
+    "sass": "^1.69.5"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "vite build",
     "deploy": "gh-pages -b master -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
+    "vite": "^7.3.1"
   }
 }
