--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@
 # VITE_API_BASE_URL=http://localhost:5000/api
 
 # For production (GitHub Pages), use remote server
-VITE_API_BASE_URL=https://portfolio-balancer-server.azurewebsites.net/api
+VITE_API_BASE_URL=https://<your-domain>/api
